<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="apiKey">YOUR_API_KEY_HERE</string>
    <string name="freezerCollectionId">YOUR_COLLECTION_ID_HERE</string>
    
    <string name="title">FreezeMe!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="scan">Scan QR code!</string>
    <string name="scanNfc">Read NFC tag!</string>
    <string name="readNfc">Read NFC tag!</string>
    <string name="app_name">FreezeMe</string>
    <string name="title_scanned_tag">Tag</string>
    <string name="bt_add">Put in Freezer!</string>
    <string name="bt_remove">Remove from Freezer!</string>
    <string name="bt_info">Product info...</string>
    <string name="expires">Expires on:</string>

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">30dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

</resources>