<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:text="name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:text="@string/expires"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <Button
        android:id="@+id/button0"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:background="@drawable/bt_red"
        android:text="@string/bt_info" 
        android:onClick="goToURL">
    </Button>
    
    
    <Button
        android:id="@+id/button1"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:background="@drawable/bt_red"
        android:text="@string/bt_add" >
    </Button>
    
    <Button
        android:id="@+id/button2"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:background="@drawable/bt_red"
        android:text="@string/bt_remove" >
    </Button>

</LinearLayout>